--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Asia/Bangkok
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Big T # the main title
+title: blaz1ken # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: just a blog  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -28,8 +28,8 @@ url: "https://truongnm1.github.io"
 github:
   username: truongnm1 # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
+#twitter:
+# username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
