--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Asia/Bangkok
 
 title: blaz1ken # the main title
 
-tagline: just a blog  # it will display as the subtitle
+tagline: simply blogging...  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A personal blog about technical and cybersecurity things or perspectives on the an adventure called LIFE.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
