--- a/_data/origin/cors.yml
+++ b/_data/origin/cors.yml
@@ -15,9 +15,7 @@ resource_hints:
       - rel: dns-prefetch
 
 # Web Fonts
-webfonts: https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap
-
-# Libraries
+webfonts: https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Merriweather:ital,opsz,wght@0,18..144,900;1,18..144,900&display=swap
 
 toc:
   css: https://cdn.jsdelivr.net/npm/tocbot@4.32.2/dist/tocbot.min.css
